--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <a name="" id="" class="btn btn-info" href="#" role="button">Button</a>
             <a name="" id="" class="btn btn-danger" href="#" role="button">Button</a>
             <a name="" id="" class="btn btn-warning" href="#" role="button">Button</a>
+            <a name="" id="" class="btn btn-warning" href="#" role="button">Button</a>
 
         </div>
 
