--- a/semana 7/crearcurso.html
+++ b/semana 7/crearcurso.html
@@ -67,12 +67,12 @@
     formulario.addEventListener('submit', function(e){
         e.preventDefault();
         
-        alert('salvadon');
+        alert('salvando');
         var datosenviar = {
-        nombre: 'Multimedios 02',
-        descripcion: 'Daniela',
-        tiempo: '1 Semestre', 
-        usuario: 'Daniela'
+        nombre: 'Mongoose',
+        descripcion: 'MongoDB',
+        tiempo: '1 ciclo', 
+        usuario: 'Mongoose'
     }
     
 
